added docker implementation